# SimplePlottingInterface

./: README.md  pyproject.toml  setup.cfg
src/simple_plotting_interface/: simple_plotting_interface_server.py
