[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "simple_plotting_interface"
version = "0.0.1"
authors = [
  { name="Lukas Rolf", email="Cyberonid@gmail.com" },
]
description = "A python package providing a GUI to display plots of the provided data using gradio."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lfighter/SimplePlottingInterface"
"Bug Tracker" = "https://github.com/lfighter/SimplePlottingInterface/issues"