[metadata]
name = simple_plotting_interface
version = attr: simple_plotting_interface.__version__
author = Lukas Rolf
author_email = Cyberonid@gmail.com
url = https://github.com/lfighter/SimplePlottingInterface
description = A python package providing a GUI to display plots of the provided data using gradio.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plotting, setuptools
license = GNU General Public License v3 (GPLv3)
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    gradio
    numpy
    pandas

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    plotting-server = simple_plotting_interface.simple_plotting_interface_server:main

#[options.extras_require]
#notebook = jupyter>=1.0.0, matplotlib
#dev = 
#    black==22.1.0
#    flake8==4.0.1

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md